# smelly-connect

./: .dockerignore  .env  Cargo.toml  README.md  config.toml  config.toml.example
smelly-connect/: Cargo.toml  README.md
smelly-connect-cli/: Cargo.toml
smelly-connect-cli/src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  management.rs  pool.rs  runtime.rs
smelly-connect-cli/src/commands/: inspect.rs  mod.rs  proxy.rs  routes.rs  status.rs  test.rs
smelly-connect-cli/src/pool/: selection.rs  state.rs
smelly-connect-cli/src/proxy/: http.rs  socks5.rs
smelly-connect-cli/tests/: cli_config.rs  http_proxy.rs  inspect.rs  logging_config.rs  logging_runtime.rs  management_api.rs  pool.rs  proxy_command.rs  routes_command.rs  socks5_proxy.rs  status_command.rs  test_commands.rs
smelly-connect-cli/tests/fixtures/: config.logging.file.toml  config.logging.off.toml  config.logging.stdout.toml  config.sample.toml
smelly-connect/examples/: debug_raw_http.rs  debug_route.rs  fetch_jwxt.rs  request_ip.rs
smelly-connect/src/: config.rs  error.rs  lib.rs  main.rs  session.rs  target.rs
smelly-connect/src/auth/: captcha.rs  control.rs  login.rs  mod.rs
smelly-connect/src/domain/: connect_plan.rs  connect_target.rs  keepalive.rs  mod.rs  resolver.rs  route_match.rs  route_policy.rs  route_protocol.rs  session.rs  session_info.rs  stream.rs
smelly-connect/src/facade/: client.rs  session.rs
smelly-connect/src/integration/: http_proxy.rs  mod.rs  reqwest.rs
smelly-connect/src/kernel/: mod.rs
smelly-connect/src/kernel/control/: encoder.rs  messages.rs  mod.rs  parser.rs
smelly-connect/src/kernel/tunnel/: cipher.rs  handshake.rs  mod.rs  parser.rs  token.rs
smelly-connect/src/protocol/: control.rs  legacy_tls.rs  mod.rs  tls.rs
smelly-connect/src/proxy/: http.rs  mod.rs
smelly-connect/src/resolver/: mod.rs
smelly-connect/src/resource/: model.rs  parse.rs
smelly-connect/src/runtime/: mod.rs
smelly-connect/src/runtime/control_plane/: client.rs  flow.rs  mod.rs  types.rs
smelly-connect/src/runtime/data_plane/: mod.rs  netstack.rs  packet_pump.rs  transport.rs  tunnel_factory.rs
smelly-connect/src/runtime/tasks/: keepalive.rs  (+2 more)
smelly-connect/src/session/: inner.rs  runtime.rs
smelly-connect/src/test_support/: auth.rs  integration.rs  mod.rs  proxy.rs  resolver.rs  session.rs  transport.rs
smelly-connect/src/transport/: datagram.rs  device.rs  mod.rs  netstack.rs  stack.rs
smelly-connect/tests/: auth_login.rs  connect_control_plane.rs  facade_session.rs  http_proxy.rs  kernel_control.rs  kernel_tunnel.rs  legacy_tls_clienthello.rs  lifecycle_handles.rs  protocol_tls.rs  public_api_audit.rs  reqwest_integration.rs  resolver.rs  resource_parse.rs  routing.rs  runtime_control_plane.rs  smoltcp_ipv4_fragmentation_feature.rs  transport_stack.rs
smelly-connect/tests/fixtures/: login_auth_requires_captcha.xml  resource_sample.xml
smelly-connect/tests/ui/: legacy_public_api.rs  legacy_public_api.stderr  public_surface.rs  public_surface.stderr
smelly-tls/: Cargo.toml
smelly-tls/examples/: probe.rs
smelly-tls/src/: lib.rs
smelly-tls/tests/: client_hello.rs  handshake.rs  key_exchange.rs  record_layer.rs
(+55 files in other folders)
