[package]
name = "smelly-connect-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "smelly_connect_cli"
path = "src/lib.rs"

[[bin]]
name = "smelly-connect-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
