[package]
name = "smelly-connect"
version = "0.2.0"
edition = "2024"

[lib]
name = "smelly_connect"
path = "src/lib.rs"

[dependencies]
rsa = "0.9"
smelly-tls = { path = "../smelly-tls", features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "net"] }
hex = "0.4"
foreign-types = "0.3"
openssl = "0.10"
openssl-sys = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
roxmltree = "0.20"
smoltcp = { version = "0.13", default-features = false, features = ["std", "async", "medium-ip", "proto-ipv4", "proto-ipv4-fragmentation", "socket-tcp", "socket-icmp"] }

[dev-dependencies]
trybuild = "1"
