[package]
name = "smelly-tls"
version = "0.1.0"
edition = "2024"

[lib]
name = "smelly_tls"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
rsa = "0.9"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt"], optional = true }

[features]
default = []
tokio = ["dep:tokio"]

[dev-dependencies]
openssl = "0.10"
