[package]
name = "smelly-tls"
version = "0.1.0"
edition = "2024"

[lib]
name = "smelly_tls"
path = "src/lib.rs"

[dependencies]
der = "0.7"
hmac = "0.12"
hex = "0.4"
md-5 = "0.10"
rc4 = "0.1"
rsa = "0.9"
sha1 = "0.10"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt"], optional = true }
x509-cert = "0.2"

[features]
default = []
tokio = ["dep:tokio"]

[dev-dependencies]
openssl = "0.10"
